--- a/styles/styles.css
+++ b/styles/styles.css
@@ -54,7 +54,8 @@ body {
   color: #121212;
 }
 .nav-link:hover {
-  border-bottom: 1px solid rgba(255, 123, 210, 0.5);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+  opacity: 0.5;
 }
 .burger-btn {
   display: none;
@@ -73,7 +74,6 @@ body {
 }
 h1 {
   width: 956px;
-  height: 120px;
   font-size: 60px;
   line-height: 60px;
   letter-spacing: -0.03em;
@@ -256,11 +256,13 @@ h2.services-title {
   text-decoration: none;
 }
 .order-service:hover {
-  border: 1px solid #ffffff;
+  border: 1px solid #ad1818;
+  color: #ad1818;
+  background-color: #ffffff;
 }
 .container-comments {
   width: 100%;
-  min-width: 1150px;
+  /* min-width: 1150px; */
   margin-bottom: 157px;
 }
 .comments-fullscreen {
@@ -545,7 +547,7 @@ h3.name-comment {
   width: 777px;
   /* height: 708px; */
   max-height: 100%;
-  /* overflow-y: scroll; */
+  overflow-y: scroll;
   background-color: #ffffff;
   border-radius: 10px;
   text-align: center;
@@ -558,6 +560,7 @@ h3.name-comment {
   letter-spacing: -0.03em;
   color: #000000;
   padding-top: 90px;
+  margin-bottom: 4px;
 }
 
 .popup-text {
@@ -581,26 +584,40 @@ h3.name-comment {
   color: #ffffff;
   background-color: #ad1818;
   border-radius: 5px;
+  border: 1px solid #ad1818;
 }
+.popup-send-btn:hover {
+  background-color: #ffffff;
+  color: #ad1818;
+}
+
 .popup-container {
-  width: 644px;
+  width: 100%;
   padding-left: 55px;
+  padding-right: 79px;
 }
 .input:focus {
   outline: none;
 }
+input:active {
+  outline: none;
+}
+
 .input-text {
-  display: block;
+  display: inline;
   box-sizing: border-box;
   width: 100%;
   margin-bottom: 50px;
+  font-family: "Manrope", sans-serif;
+  font-style: normal;
+  font-weight: 400;
   font-size: 25px;
-  line-height: 45px;
+  line-height: 34px;
   text-align: center;
   letter-spacing: -0.03em;
   color: #000000;
   border: none;
-  border-bottom: 2px solid black;
+  border-bottom: 1px solid black;
 }
 
 .input-text::placeholder {
@@ -629,6 +646,8 @@ h3.name-comment {
 .burger-content {
   position: relative;
   background-color: #ffffff;
+  /* max-height: 100%; */
+  overflow-y: scroll;
   width: 274px;
   height: 100%;
 }
@@ -689,6 +708,7 @@ h3.name-comment {
   height: 34px;
   background-repeat: no-repeat;
   background-position: center;
+  background-color: #ffffff;
   border: none;
   cursor: pointer;
 }
